[package]
name = "balena-temen"
version = "0.0.19"
authors = ["Robert Vojta <robert@balena.io>", "Cyryl Płotnicki <cyryl@balena.io>"]
edition = "2018"
maintenance = { status = "actively-developed" }
license = "Apache-2.0"
repository = "https://github.com/balena-io-modules/balena-temen/"
description = "Templating engine for (not just) JSON"
categories = ["parsing", "template-engine", "wasm"]
readme = "README.md"

[badges]
travis-ci = { repository = "balena-io-modules/balena-temen", branch = "master" }

[dependencies]
approx = "0.3"
chrono = { git = "https://github.com/jjpe/chrono", rev = "52adf963e6e98cd75a4c4523abd7a1465e2ac63d" }
lazy_static = "1"
pest = "2"
pest_derive = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
slug = "0.1"
uuid = { features = ["v4"], git = "https://github.com/zrzka/uuid.git", branch = "feature/wasm" }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
uuid = { features = ["wasm-bindgen"], git = "https://github.com/zrzka/uuid.git", branch = "feature/wasm" }
wasm-bindgen= { version="0.2", features = ["serde-serialize"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["lib", "cdylib"]
