[package]
name = "balena-temen"
version = "0.0.19"
authors = ["Robert Vojta <robert@balena.io>", "Cyryl Płotnicki <cyryl@balena.io>"]
edition = "2018"
maintenance = { status = "actively-developed" }
license = "Apache-2.0"
repository = "https://github.com/balena-io-modules/balena-temen/"
description = "Templating engine for (not just) JSON"
categories = ["parsing", "template-engine", "wasm"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[badges]
travis-ci = { repository = "balena-io-modules/balena-temen", branch = "master" }

[dependencies.approx]
version = "0.3"

[dependencies.chrono]
# https://github.com/balena-io-modules/balena-temen/issues/37
git = "https://github.com/jjpe/chrono"
rev = "52adf963e6e98cd75a4c4523abd7a1465e2ac63d"

[dependencies.lazy_static]
version = "1"

[dependencies.pest]
version = "2"

[dependencies.pest_derive]
version = "2"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.slug]
version = "0.1"

[dependencies.uuid]
# https://github.com/balena-io-modules/balena-temen/issues/35
git = "https://github.com/zrzka/uuid.git"
branch = "feature/wasm"
features = ["v4"]

[target.wasm32-unknown-unknown.dependencies.console_error_panic_hook]
version = "0.1"

[target.wasm32-unknown-unknown.dependencies.uuid]
# https://github.com/balena-io-modules/balena-temen/issues/35
git = "https://github.com/zrzka/uuid.git"
branch = "feature/wasm"
features = ["wasm-bindgen"]

[target.wasm32-unknown-unknown.dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[target.wasm32-unknown-unknown.dev-dependencies.wasm-bindgen-test]
version = "0.2"
