[package]
name = "balena-temen"
version = "0.5.7"
authors = ["Robert Vojta <robert@balena.io>", "Cyryl Płotnicki <cyryl@balena.io>"]
edition = "2018"
maintenance = { status = "actively-developed" }
license = "Apache-2.0"
repository = "https://github.com/balena-io-modules/balena-temen/"
description = "Templating engine for (not just) JSON"
categories = ["parsing", "template-engine", "wasm"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
disable-wasm-bindings = []

[badges]
travis-ci = { repository = "balena-io-modules/balena-temen", branch = "master" }

[dependencies.approx]
version = "0.3"

[dependencies.chrono]
version = "0.4"

[dependencies.lazy_static]
version = "1"

[dependencies.pest]
version = "2"

[dependencies.pest_derive]
version = "2"

[dependencies.rand]
version = "0.6"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.slug]
version = "0.1"

[dependencies.uuid]
version = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies.console_error_panic_hook]
version = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.js-sys]
version = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.rand]
version = "<=0.6.2"
features = ["wasm-bindgen"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies.wasm-bindgen-test]
version = "0.2"
